Install next-themes. Add a light / dark theme feature. Fix a few design and layout problems.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,35 +1,56 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --bg: #e6e6e6;
+  --text: #121212;
+  --bg-2: #d2d2d5;
+  --menu: #d7e0e3;
+  --input: #dee5e7;
+  --input-border: #ababab;
+  --hover: #cacacf;
+  --btn: #dbe0e1;
+  --warning: #485a65;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+[data-theme='dark'] {
+  --bg: #121212;
+  --text: #ededed;
+  --bg-2: #232326;
+  --input: #0f0f11;
+  --menu: #1a1a1e;
+  --input-border: #404040;
+  --hover: #3f3f46;
+  --btn: #1b1b1d;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  :root:not([data-theme='light']) {
+    --bg: #121212;
+    --text: #ededed;
+    --bg-2: #232326;
+    --input: #0f0f11;
+    --menu: #1a1a1e;
+    --input-border: #404040;
+    --hover: #3f3f46;
+    --btn: #1b1b1d;
   }
 }
 
 body {
-  background: #27272A;
-  color: var(--foreground);
+  background: var(--bg-2);
+  color: var(--text);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bg-comment {
-  background-image: url("../../public/comment.svg");
+.bg-warning {
+  background-image: url("../../public/warning.svg");
   background-size: contain;
   background-repeat: no-repeat;
-  width: 100%; 
+  width: 100%;
+}
+
+[data-theme="dark"] .bg-warning {
+  background-image: url("../../public/warning-dark.svg");
 }
 
 select {
@@ -38,5 +59,6 @@ select {
 
 input::placeholder {
   color: #aaa;
-  opacity: 1; /* Fix Safari's default opacity */
+  opacity: 1;
+  /* Fix Safari's default opacity */
 }
